--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,6 +1,9 @@
 @import "../bootstrap/scss/bootstrap.scss";
 
-.py-150{
-    padding-top: ($spacer * 9) !important;
-    padding-bottom: ($spacer * 9) !important;
+.pt-13{
+    padding-top: ($spacer * 13) !important;
+}
+
+.pb-11-4{
+    padding-bottom: ($spacer * 11.5) !important;
 }
