Add heroku procfile

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -127,19 +127,18 @@
 
   <!--  포트폴리오-->
 <!-- shopping mall ,고라쿠 리스트, 스터디야, 모멘텀, 네온사인
-
 -->
   <div class="section" id="section2">
     <div class="intro">
-      <h1>Just use </h1>
-      <p>autoScrolling:false</p>
+      <h1>project area </h1>
+      <p>PA</p>
     </div>
   </div>
 
   <div class="section" id="section3">
     <div class="intro">
-      <h1>Contact me </h1>
-      <p></p>
+      <h1>Contact me area </h1>
+      <p>CM</p>
     </div>
   </div>
 </div>
