--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
           position: absolute;
           top: 0;
           width: 100%;
-          height: 100%;
+          height: 200%;
           z-index: 60;
       }
 
@@ -76,8 +76,35 @@
       #first * {
           display: block;
       }
-  </style>
 
+      #section1 img {
+          border-radius: 20px;
+          border: 2px solid #DDD;
+      }
+      .section1Container {
+          z-index: 100;
+          position: relative;
+          max-width: 1500px;
+          width: 100%;
+          margin-left: auto;
+          margin-right: auto;
+          background-color: rgba(255, 255, 255, 0.05);
+          padding: 50px;
+          border-radius: 20px;
+      }
+
+      #myImg {
+          flex: 1 1 0;
+      }
+
+      #myDesc {
+          flex: 3 1 0;
+      }
+
+      #myDesc .d-flex {
+          height: 33.33%;
+      }
+  </style>
 </head>
 <body>
 <div class="menu-wrapper">
@@ -110,24 +137,49 @@
          id="first" class="position-relative text-white">
       <h1 class="display-1">Irostub</h1>
       <h3 class="display-4">Backend Engineer</h3>
-        <p class="text-muted">Keep it small and simple. Add value to code.</p>
+      <p class="text-muted">Keep it small and simple. Add value to code.</p>
     </div>
     <div id="particles-js"></div>
   </div>
 
   <!--자기 소개 프로필-->
-  <div class="section" id="section1">
-    <div data-aos="fade-up">
-      <p class="text-white">Intro</p>
-<!-- 1    2
-     1    3
-     형태로 구성-->
+  <div class="section text-white" id="section1">
+    <div data-aos="fade-up"
+         data-aos-delay="500"
+         data-aos-duration="500">
+      <div class="section1Container">
+        <!--        <h2 class="display-2">Who am I</h2>-->
+        <div class="d-flex justify-content-center">
+          <div class="mr-4" id="myImg"><img src="/images/me.png" width="400" alt="my_pic"></div>
+          <div id="myDesc">
+            <div class="d-flex flex-column">
+              <h4 class="display-4">Who am I</h4>
+                <p>능동적으로 일하며 부지런히 공부하는, 한발 더 전진하는 것에 큰 기쁨을 느끼는 개발자</p>
+              <ul>
+                <li>의미 코드의 1일 1커밋을 목표</li>
+                <li>같이 일하는 시너지와 즐거움</li>
+              </ul>
+            </div>
+            <div class="d-flex flex-column">
+              <h2>Motto</h2>
+              <p>Keep it short and simple!</p>
+              <p>간단하고 이해하기 쉬운 코드를 작성하는 것을 지향</p>
+            </div>
+            <div class="d-flex flex-column">
+              <h2>Skills</h2>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+  <!-- 1    2
+       1    3
+       형태로 구성-->
 
   <!--  포트폴리오-->
-<!-- shopping mall ,고라쿠 리스트, 스터디야, 모멘텀, 네온사인
--->
+  <!-- shopping mall ,고라쿠 리스트, 스터디야, 모멘텀, 네온사인
+  -->
   <div class="section" id="section2">
     <div class="intro">
       <h1>project area </h1>
