--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -104,6 +104,22 @@
       #myDesc .d-flex {
           height: 33.33%;
       }
+
+      #skills{
+          padding: 0;
+          list-style: none;
+          float: left;
+      }
+
+      #skills li{
+          float:left;
+          background: #DDD;
+          color:#222;
+          padding:4px 20px;
+          border-radius: 20px;
+          margin-right: 5px;
+          margin-bottom: 5px;
+      }
   </style>
 </head>
 <body>
@@ -167,6 +183,19 @@
             </div>
             <div class="d-flex flex-column">
               <h2>Skills</h2>
+                <ul id="skills">
+                  <li><img src="/images/icon/spring.png" alt=""> Spring</li>
+                  <li>JPA</li>
+                  <li>RDB</li>
+                  <li><img src="/images/icon/docker.png" alt=""> Docker</li>
+                  <li><img src="/images/icon/java.png" alt=""> Java</li>
+                  <li><img src="/images/icon/python.png" alt=""> Python</li>
+                  <li><img src="/images/icon/csharp.png" alt=""> C#</li>
+                  <li>SQL</li>
+                  <li><img src="/images/icon/html.png" alt=""> Html</li>
+                  <li><img src="/images/icon/javascript.png" alt=""> Javascript</li>
+                  <li><img src="/images/icon/css.png" alt=""> Css</li>
+                </ul>
             </div>
           </div>
         </div>
