--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -125,6 +125,16 @@
       .projectItem {
           margin-bottom: 50px;
       }
+
+      #section3 ul {
+          padding: 0;
+          list-style: none;
+          float: left;
+      }
+
+      #section3 li {
+          float: left;
+      }
   </style>
 </head>
 <body>
@@ -172,7 +182,6 @@
     <div data-aos="fade-up"
          data-aos-duration="500">
       <div class="section1Container">
-        <!--        <h2 class="display-2">Who am I</h2>-->
         <div class="d-flex justify-content-center">
           <div class="mr-4" id="myImg"><img src="/images/me.png" width="400" alt="my_pic"></div>
           <div id="myDesc">
@@ -185,9 +194,8 @@
               </ul>
             </div>
             <div class="d-flex flex-column">
-              <h2>Motto</h2>
-              <p>Keep it short and simple!</p>
-              <p>간단하고 이해하기 쉬운 코드를 작성하는 것을 지향</p>
+              <h2 class="pt-4 pb-1">Motto</h2>
+              <p>Keep it short and simple!<br>간단하고 이해하기 쉬운 코드를 작성하는 것을 지향</p>
             </div>
             <div class="d-flex flex-column">
               <h2>Skills</h2>
@@ -210,13 +218,7 @@
       </div>
     </div>
   </div>
-  <!-- 1    2
-       1    3
-       형태로 구성-->
 
-  <!--  포트폴리오-->
-  <!-- shopping mall ,고라쿠 리스트, 스터디야, 모멘텀, 네온사인
-  -->
   <div class="section" id="section2">
     <div class="sectionContainer">
       <div class="projectItem"
@@ -280,8 +282,8 @@
         <h1>Goraku List</h1>
         <p>PA</p>
         <a target="_blank"
-                href='https://github.com/rainbow-flavor/GorakuList'
-                class="btn btn-outline-dark">
+           href='https://github.com/rainbow-flavor/GorakuList'
+           class="btn btn-outline-dark">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-square"
                viewBox="0 0 16 16">
             <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
@@ -290,8 +292,8 @@
           [FE]Get Code
         </a>
         <a target="_blank"
-                href='https://github.com/rainbow-flavor/GorakuList-back'
-                class="btn btn-outline-dark">
+           href='https://github.com/rainbow-flavor/GorakuList-back'
+           class="btn btn-outline-dark">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-square"
                viewBox="0 0 16 16">
             <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
@@ -315,8 +317,8 @@
         <h1>Glow timer</h1>
         <p>PA</p>
         <a target="_blank"
-                href='https://github.com/irostub/glow-timer'
-                class="btn btn-outline-dark">
+           href='https://github.com/irostub/glow-timer'
+           class="btn btn-outline-dark">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-square"
                viewBox="0 0 16 16">
             <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
@@ -340,8 +342,8 @@
         <h1>Momentom</h1>
         <p>PA</p>
         <a target="_blank"
-                href='https://github.com/irostub/momentum'
-                class="btn btn-outline-dark">
+           href='https://github.com/irostub/momentum'
+           class="btn btn-outline-dark">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-square"
                viewBox="0 0 16 16">
             <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
@@ -363,10 +365,36 @@
 
   <div class="section" id="section3">
     <div class="sectionContainer">
-      <h1>Contact me area </h1>
-      <p>CM</p>
+      <h1 class="display-4 mb-5">Drop me a line</h1>
+      <!--is-invalid 검증 오류 시-->
+      <form th:action="@{/line}" method="post">
+        <div class="form-group">
+          <label for="fullname">Full Name</label>
+          <input type="text" class="form-control" id="fullname" placeholder="What's your name?" required>
+          <div class="invalid-feedback">
+            Please provide a valid city.
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" id="email" placeholder="you@email.com" required>
+          <div class="invalid-feedback">
+            Please, Check your email.
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="lineMessage">Email address</label>
+          <textarea rows="8" class="form-control" id="lineMessage" placeholder="Write your message for me"
+                    required></textarea>
+          <div class="invalid-feedback">
+            Message can't blank.
+          </div>
+        </div>
+        <button class="btn w-100 btn-warning">Submit</button>
+      </form>
     </div>
   </div>
+</div>
 </div>
 <script src="/node_modules/particles.js/particles.js"></script>
 <script th:inline="javascript">
@@ -381,6 +409,7 @@
         anchors: ['firstPage', 'secondPage', '3rdPage', '4rdPage'],
         sectionsColor: ['#222222', '#222222', '#DDDDDD', '#DDDDDD'],
         autoScrolling: false,
+        fitToSectionDelay: 500,
         licenseKey: '75CCC562-E65645AD-AD246452-83704190'
     });
 </script>
