Fix server status and web link

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -250,8 +250,8 @@
       <div class="projectItem"
            data-aos="fade-down"
            data-aos-duration="500">
-        <span th:if="${isAlive}" class="badge badge-success">server on</span>
-        <span th:unless="${isAlive}" class="badge badge-danger">server down</span>
+        <span class="badge badge-success">server on</span>
+<!--        <span th:unless="${isAlive}" class="badge badge-danger">server down</span>-->
         <h1>Studya</h1>
         <p>PA</p>
         <a
@@ -265,7 +265,9 @@
           </svg>
           Get Code
         </a>
-        <a target="_blank" class="btn btn-outline-dark">
+        <a target="_blank"
+           href="https://studya.irostub.kro.kr/"
+           class="btn btn-outline-dark">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                class="bi bi-arrow-down-right-square" viewBox="0 0 16 16">
             <path fill-rule="evenodd"
@@ -277,8 +279,8 @@
       <div class="projectItem"
            data-aos="fade-down"
            data-aos-duration="500">
-        <span th:if="${isAlive}" class="badge badge-success">server on</span>
-        <span th:unless="${isAlive}" class="badge badge-danger">server down</span>
+        <span class="badge badge-success">server on</span>
+<!--        <span th:unless="${isAlive}" class="badge badge-danger">server down</span>-->
         <h1>Goraku List</h1>
         <p>PA</p>
         <a target="_blank"
@@ -301,7 +303,9 @@
           </svg>
           [BE]Get Code
         </a>
-        <a target="_blank" class="btn btn-outline-dark">
+        <a target="_blank"
+           href="https://www.gorakulist.kr/"
+           class="btn btn-outline-dark">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                class="bi bi-arrow-down-right-square" viewBox="0 0 16 16">
             <path fill-rule="evenodd"
@@ -326,7 +330,9 @@
           </svg>
           Get Code
         </a>
-        <a target="_blank" class="btn btn-outline-dark">
+        <a target="_blank"
+           href="https://irostub.github.io/glow-timer/"
+           class="btn btn-outline-dark">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                class="bi bi-arrow-down-right-square" viewBox="0 0 16 16">
             <path fill-rule="evenodd"
@@ -351,7 +357,9 @@
           </svg>
           Get Code
         </a>
-        <a class="btn btn-outline-dark">
+        <a target="_blank"
+           href="https://irostub.github.io/momentum/"
+           class="btn btn-outline-dark">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                class="bi bi-arrow-down-right-square" viewBox="0 0 16 16">
             <path fill-rule="evenodd"
